// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code/reducer CHANGE 1`] = `
Object {
  "code": "bar = 1",
  "dirty": true,
  "filename": undefined,
  "parsing": false,
  "uastJson": null,
}
`;

exports[`code/reducer PARSE 1`] = `
Object {
  "code": null,
  "dirty": false,
  "filename": undefined,
  "parsing": true,
  "posIndex": null,
  "uastJson": null,
}
`;

exports[`code/reducer PARSE_FAILED 1`] = `
Object {
  "code": null,
  "dirty": false,
  "filename": undefined,
  "parsing": false,
  "uastJson": null,
}
`;

exports[`code/reducer SET 1`] = `
Object {
  "code": "foo = 1",
  "dirty": false,
  "filename": "file.py",
  "markRange": null,
  "parsing": false,
  "uastJson": Object {
    "InternalType": "file",
  },
}
`;

exports[`code/reducer SET_AST 1`] = `
Object {
  "code": null,
  "dirty": false,
  "filename": undefined,
  "parsing": false,
  "uastJson": Object {
    "1": Object {
      "id": 1,
    },
  },
}
`;
